--- a/signin.ejs
+++ b/signin.ejs
@@ -33,7 +33,7 @@
         formaction="/signup"
       />
     </form>
-    <% if(userId == "retry") {%>
+    <% if(userId == -1) {%>
     <p class="center">
       Username and/or password are incorrect<br />Please try again, or sign up
     </p>
