--- a/signup.ejs
+++ b/signup.ejs
@@ -29,7 +29,7 @@
       <input type="input" id="name" name="name" class="extend" value="" /><br />
       <input type="submit" value="Sign up" />
     </form>
-    <% if(userId == "inuse") {%>
+    <% if(userId == -1) {%>
     <p class="center">
       Username is currently in use<br />Please choose a differnet username
     </p>
